--- a/src/coursework2/FXML.fxml
+++ b/src/coursework2/FXML.fxml
@@ -11,9 +11,10 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.media.MediaView?>
 <?import javafx.scene.paint.Color?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<VBox fx:id="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1800.0" xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1">
+<VBox fx:id="container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1800.0" xmlns="http://javafx.com/javafx/8.0.251" xmlns:fx="http://javafx.com/fxml/1" fx:controller="coursework2.FXMLController">
   <children>
     <SplitPane fx:id="mainWrapper" dividerPositions="0.19270298047276466, 0.8042137718396711" focusTraversable="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1800.0" VBox.vgrow="ALWAYS">
       <items>
@@ -27,19 +28,43 @@
                 <Color blue="0.624" green="0.624" red="0.624" fx:id="x2" />
               </textFill>
             </Label>
-                  <ListView fx:id="libraryList" layoutX="15.0" layoutY="113.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="522.0" prefWidth="273.0" />
-                  <TextField fx:id="librarySearchField" layoutX="14.0" layoutY="72.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="149.0" promptText="Search" />
-                  <Button fx:id="libraryAdd" layoutX="129.0" layoutY="644.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="33.0" style="-fx-background-radius: 100;">
+                  <ListView fx:id="libraryList" layoutX="15.0" layoutY="101.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="409.0" prefWidth="273.0" />
+                  <TextField fx:id="librarySearchField" layoutX="14.0" layoutY="61.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="31.0" prefWidth="128.0" promptText="Search" />
+                  <Button fx:id="libraryIncludeButton" layoutX="87.0" layoutY="651.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="33.0" style="-fx-background-radius: 100;">
                      <graphic>
                         <ImageView fx:id="libraryAddImage" fitHeight="23.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@Icons/book-open.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+                  <Button fx:id="librarySearchName" layoutX="147.0" layoutY="62.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="67.0" text="Name" />
+                  <Button fx:id="librarySearchReset" layoutX="218.0" layoutY="62.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="67.0" text="Reset" />
+                  <TextField fx:id="libraryAddName" layoutX="14.0" layoutY="577.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="128.0" promptText="Song Name" />
+                  <TextField fx:id="libraryAddArtistName" layoutX="155.0" layoutY="578.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="128.0" promptText="Artist Name" />
+                  <TextField fx:id="libraryAddRuntime" layoutX="14.0" layoutY="614.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="128.0" promptText="Play Time" />
+                  <TextField fx:id="libraryAddVideoFile" layoutX="155.0" layoutY="613.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="128.0" promptText="Video File Name" />
+                  <Button fx:id="libraryAdd" layoutX="90.0" layoutY="518.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="33.0" style="-fx-background-radius: 100;">
+                     <graphic>
+                        <ImageView fx:id="libraryAddImage1" fitHeight="23.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                            <image>
                               <Image url="@Icons/plus.png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="librarySearchName" layoutX="171.0" layoutY="72.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="53.0" text="Name" />
-                  <Button fx:id="librarySearchReset" layoutX="232.0" layoutY="72.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="53.0" text="Reset" />
+                  <Label fx:id="libraryIncludeLibraryLabel" layoutX="130.0" layoutY="657.0" text="Add to Library">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Label fx:id="libraryAddQueueText" layoutX="133.0" layoutY="525.0" prefHeight="25.0" prefWidth="111.0" text="Add to Queue" textAlignment="CENTER">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
+                  <Line fx:id="libraryLineSeperator" endX="233.0" layoutX="67.0" layoutY="563.0" startX="-100.0" />
           </children>
         </AnchorPane>
       <AnchorPane id="Content" fx:id="mediaWrapper" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1200.0">
@@ -85,7 +110,7 @@
         <AnchorPane fx:id="queueWrapper" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="300.0">
           <children>
             <Label fx:id="queueText" alignment="CENTER" font="$x1" layoutX="16.0" layoutY="14.0" style="&#10;" text="Queue" textAlignment="CENTER" textFill="$x2" wrapText="false" />
-                  <Button fx:id="queueRemove" layoutX="140.0" layoutY="631.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="33.0" style="-fx-background-radius: 100;">
+                  <Button fx:id="queueRemove" layoutX="69.0" layoutY="636.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="33.0" style="-fx-background-radius: 100;">
                      <graphic>
                         <ImageView fx:id="queueRemoveImage" fitHeight="23.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -94,8 +119,13 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Label layoutX="15.0" layoutY="57.0" prefHeight="27.0" prefWidth="270.0" style="-fx-text-alignment: center;" text="Current Song: None" textAlignment="CENTER" wrapText="true" />
+                  <Label fx:id="queueCurrentLabel" layoutX="15.0" layoutY="57.0" prefHeight="27.0" prefWidth="270.0" style="-fx-text-alignment: center;" text="Current Song: None" textAlignment="CENTER" wrapText="true" />
                   <ListView fx:id="queueList" layoutX="13.0" layoutY="92.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="522.0" prefWidth="273.0" />
+                  <Label fx:id="QueueRemoveLabel" layoutX="114.0" layoutY="642.0" prefHeight="25.0" prefWidth="149.0" text="Remove from Queue" textAlignment="CENTER">
+                     <font>
+                        <Font size="16.0" />
+                     </font>
+                  </Label>
           </children>
         </AnchorPane>
       </items>
